remove duplicate surefire config