@@ -782,26 +782,6 @@
             </plugin>
 
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.13</version>
-                <configuration>
-                    <excludes>
-                        <exclude>**/it/*.java</exclude>
-                        <exclude>**/selenium/*.java</exclude>
-                    </excludes>
-                    <argLine>-Xms512M -Xmx1G -XX:MaxPermSize=512M</argLine>
-                    <systemProperties>
-                        <spring.profiles.active>dev</spring.profiles.active>
-                        <mongodb.port>27018</mongodb.port>
-                    </systemProperties>
-                    <additionalClasspathElements>
-                        <additionalClasspathElement>src/main/resources</additionalClasspathElement>
-                    </additionalClasspathElements>
-                </configuration>
-            </plugin>
-
-            <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.1</version>
