@@ -100,6 +100,25 @@
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.13</version>
+                        <configuration>
+                            <excludes>
+                                <exclude>**/it/*.java</exclude>
+                            </excludes>
+                            <argLine>-Xms512M -Xmx1G -XX:MaxPermSize=512M</argLine>
+                            <systemProperties>
+                                <spring.profiles.active>it</spring.profiles.active>
+                                <mongodb.port>27018</mongodb.port>
+                            </systemProperties>
+                            <additionalClasspathElements>
+                                <additionalClasspathElement>src/main/resources</additionalClasspathElement>
+                            </additionalClasspathElements>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
                         <version>2.13</version>
                         <configuration>
